@@ -1,5 +1,14 @@
 2007-12-17  Benjamin Berg  <benjamin@sipsolutions.net>
 
+	* engines/clearlooks/src/clearlooks_draw.c: (clearlooks_draw_tab):
+	* engines/clearlooks/src/clearlooks_draw_glossy.c:
+	(clearlooks_glossy_draw_tab):
+	* engines/clearlooks/src/clearlooks_draw_inverted.c:
+	(clearlooks_inverted_draw_tab):
+	Port the fix for bug #475291 to the other clearlooks styles.
+
+2007-12-17  Benjamin Berg  <benjamin@sipsolutions.net>
+
 	* themes/Clearlooks/gtk-2.0/gtkrc:
 	Work around evolution ETree and ETable headers
 	(#492372, Michael Monreal)
